Auth API controller standardized
